--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-11-20  Don Scorgie  <dscorgie@cvs.gnome.org>
 
+	* src/yelp-io-channel.c: 
+	Check the file exists and is valid before trying
+	to read it (fixes bug #371680)
+	
 	* src/yelp-gecko-services.cpp: 
 	Fix printing ranges (bug #370618, Christian Persch)
 	
