--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+==================== 2.16.2 ====================
+2006-11-20  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* NEWS:
+	* configure.in:
+	- Version 2.16.2
+
 2006-11-20  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-utils.c:
