--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-1  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation.
+
 2006-11-24  Djihed Afifi" <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation.
