--- a/po/ar.po
+++ b/po/ar.po
@@ -1,29 +1,32 @@
-# translation of yelp.HEAD.ar.po to 
+# translation of yelp.HEAD.ar.po to Arabic
+# translation of yelp.HEAD.ar.po to
 # translation of yelp.po to
-# translation of yelp.po to Arabic
 # This file is distributed under the same license as the PACKAGE package.
 # Copyright (C) 2003 THE PACKAGE'S COPYRIGHT HOLDER
+#
+#
 # Sayed Jaffer Al-Mosawi <mosawi@arabeyes.org>, 2002.
 # Isam Bayazidi <bayazidi@arabeyes.org>, 2002.
 # Arafat Medini <lumina@silverpen.de>, 2003, 2005.
 # Djihed Afifi <djihed@gmail.com>, 2006.
-#
-#
+# Khaled Hosny <khaledhosny@eglug.org>, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD.ar\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-24 13:03+0000\n"
-"PO-Revision-Date: 2006-10-05 21:07-0000\n"
-"Last-Translator: Djihed Afifi <djihed@gmail.com>\n"
-"Language-Team:  <en@li.org>\n"
+"PO-Revision-Date: 2006-11-25 21:34+0200\n"
+"Last-Translator: Khaled Hosny <khaledhosny@eglug.org>\n"
+"Language-Team: Arabic <support@arabeyes.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
+"Plural-Forms: Plural-Forms: nplurals=4; plural=n==1 ? 0 : n==2 ? 1 : n>=3 && n<=10 ? 2 : 3\n"
 
 #: ../data/info.xml.in.h:1 ../src/yelp-toc-pager.c:1849
 msgid "GNU Info Pages"
-msgstr " صفحات المعلومات لجنو"
+msgstr "صفحات معلومات جنو"
 
 #: ../data/info.xml.in.h:2
 msgid "Traditional command line help (info)"
@@ -35,7 +38,7 @@ msgstr "تطبيقات"
 
 #: ../data/man.xml.in.h:2
 msgid "BLT Functions"
-msgstr "وظائف BLT"
+msgstr "دالّات BLT"
 
 #: ../data/man.xml.in.h:3
 msgid "Configuration Files"
@@ -43,7 +46,7 @@ msgstr "ملفّات الإعدادات"
 
 #: ../data/man.xml.in.h:4
 msgid "Curses Functions"
-msgstr "وظائف Curses"
+msgstr "دالّات Curses"
 
 #: ../data/man.xml.in.h:5
 msgid "Development"
@@ -59,7 +62,7 @@ msgstr "ألعاب"
 
 #: ../data/man.xml.in.h:8
 msgid "Hardware Devices"
-msgstr "ادوات اﻻجهزة"
+msgstr "أدوات العتاد"
 
 #: ../data/man.xml.in.h:9
 msgid "Kernel Routines"
@@ -67,11 +70,11 @@ msgstr "روتين النواة"
 
 #: ../data/man.xml.in.h:10 ../src/yelp-toc-pager.c:1843
 msgid "Manual Pages"
-msgstr "صفحات المساعدة"
+msgstr "صفحات الكتيبات"
 
 #: ../data/man.xml.in.h:11
 msgid "Network Audio Sound Functions"
-msgstr "وظائف الصوت الشبكية"
+msgstr "دالّات الصوت الشبكية"
 
 #: ../data/man.xml.in.h:12
 msgid "OpenSSL Applications"
@@ -83,7 +86,7 @@ msgstr "إعدادات OpenSSL"
 
 #: ../data/man.xml.in.h:14
 msgid "OpenSSL Functions"
-msgstr "وظائف OpenSSL"
+msgstr "دالّات OpenSSL"
 
 #: ../data/man.xml.in.h:15
 msgid "OpenSSL Overviews"
@@ -95,15 +98,15 @@ msgstr "معاينات"
 
 #: ../data/man.xml.in.h:17
 msgid "POSIX Functions"
-msgstr "وظائف POSIX "
+msgstr "دالّات POSIX "
 
 #: ../data/man.xml.in.h:18
 msgid "POSIX Headers"
-msgstr "مقدمات POSIX "
+msgstr "ترويسات POSIX "
 
 #: ../data/man.xml.in.h:19
 msgid "Perl Functions"
-msgstr "دالّات بارل"
+msgstr "دالّات بيرل"
 
 #: ../data/man.xml.in.h:20
 msgid "Qt Functions"
@@ -111,7 +114,7 @@ msgstr "دالّات Qt"
 
 #: ../data/man.xml.in.h:21
 msgid "Readline Functions"
-msgstr "وظائف Readline "
+msgstr "دالّات Readline "
 
 #: ../data/man.xml.in.h:22
 msgid "Section 0p"
@@ -207,39 +210,39 @@ msgstr "الفصل 9"
 
 #: ../data/man.xml.in.h:45
 msgid "Sections 1, 1p, 1g and 1t"
-msgstr "الفصل 1, 1p, 1g  و 1t"
+msgstr "الفصول 1، 1p، 1g  و 1t"
 
 #: ../data/man.xml.in.h:46
 msgid "Sections 3, 3o, and 3t"
-msgstr "الفصل 3, 3o, و 3t"
+msgstr "الفصول 3، 3o، و 3t"
 
 #: ../data/man.xml.in.h:47
 msgid "Sections 3form and 3menu"
-msgstr "الفصل 3form و 3menu"
+msgstr "الفصول 3form و 3menu"
 
 #: ../data/man.xml.in.h:48
 msgid "Sections 3ncurses and 3curses"
-msgstr "الفصل 3ncurses و 3curses "
+msgstr "الفصول 3ncurses و 3curses "
 
 #: ../data/man.xml.in.h:49
 msgid "Sections 3pm and 3perl"
-msgstr "الفصل 3pm و 3perl"
+msgstr "الفصول 3pm و 3perl"
 
 #: ../data/man.xml.in.h:50
 msgid "Sections 3x and 3X11"
-msgstr "الفصل 3x و 3X11"
+msgstr "الفصول 3x و 3X11"
 
 #: ../data/man.xml.in.h:51
 msgid "Sections 7 and 7gcc"
-msgstr "الفصل 7 و 7gcc"
+msgstr "الفصول 7 و 7gcc"
 
 #: ../data/man.xml.in.h:52
 msgid "Sections 8 and 8l"
-msgstr "الفصل 8 و 8l"
+msgstr "الفصول 8 و 8l"
 
 #: ../data/man.xml.in.h:53
 msgid "System Administration"
-msgstr "مدير النظام"
+msgstr "إدارة النظام"
 
 #: ../data/man.xml.in.h:54
 msgid "System Calls"
@@ -247,11 +250,11 @@ msgstr "نداءات النظام"
 
 #: ../data/man.xml.in.h:55
 msgid "System V Form/Menu Functions"
-msgstr "الوضع V للنظام/وظائف القائمة"
+msgstr "نموذج System V/وظائف القائمة"
 
 #: ../data/man.xml.in.h:56
 msgid "TIFF Functions"
-msgstr "وظائف TIFF"
+msgstr "دالّات TIFF"
 
 #: ../data/man.xml.in.h:57
 msgid "Termcap Applications"
@@ -299,7 +302,7 @@ msgstr "تطبيقات للتسلية"
 
 #: ../data/toc.xml.in.h:4
 msgid "Applications for manipulating or viewing graphics"
-msgstr "تطبيقات لعرض و تغيير الرسومات"
+msgstr "تطبيقات لعرض الرسوم والتعامل معها"
 
 #: ../data/toc.xml.in.h:5
 msgid "Applications for word processing and other office tasks"
@@ -327,15 +330,15 @@ msgstr "تطبيقات متعلقة بالشريط"
 
 #: ../data/toc.xml.in.h:11
 msgid "Applications that support assistive technologies"
-msgstr "تطبيقات تساعد فى تكنولوجيا الإعانة"
+msgstr "تطبيقات تدعم تقانة الإعانة"
 
 #: ../data/toc.xml.in.h:12
 msgid "Desktop"
-msgstr "المكتب"
+msgstr "سطح المكتب"
 
 #: ../data/toc.xml.in.h:13
 msgid "Documents specific to the KDE Desktop Environment"
-msgstr "مستندات خاصة بسطح المكتب كاي دي إي KDE"
+msgstr "مستندات خاصة بسطح المكتب KDE"
 
 #: ../data/toc.xml.in.h:14
 msgid "Education"
@@ -371,7 +374,7 @@ msgstr "تطبيقات أخرى"
 
 #: ../data/toc.xml.in.h:23
 msgid "Other Documentation"
-msgstr "توثيقات أخرى"
+msgstr "وثائق أخرى"
 
 #: ../data/toc.xml.in.h:24
 msgid "Panel Applets"
@@ -411,7 +414,7 @@ msgstr "تطبيقات أخرى مختلفة"
 
 #: ../data/toc.xml.in.h:33
 msgid "Welcome to the GNOME Help Browser"
-msgstr "أهلا في متصفح المساعدة لجنوم"
+msgstr "أهلا في متصفح مساعدة جنوم"
 
 #: ../data/toc.xml.in.h:34
 msgid "X Applications"
@@ -427,7 +430,7 @@ msgstr "<b>الخطوط</b>"
 
 #: ../data/ui/yelp.glade.h:3
 msgid "Add Bookmark"
-msgstr "إضافة علامة موقع"
+msgstr "أضف علامة موقع"
 
 #: ../data/ui/yelp.glade.h:4
 msgid "Bookmarks"
@@ -439,11 +442,11 @@ msgstr "حساس لل_حالة"
 
 #: ../data/ui/yelp.glade.h:6
 msgid "Find"
-msgstr "بحث"
+msgstr "جِد"
 
 #: ../data/ui/yelp.glade.h:7
 msgid "Open Location"
-msgstr "فتح موقع"
+msgstr "افتح موقع"
 
 #: ../data/ui/yelp.glade.h:8
 msgid "Preferences"
@@ -451,7 +454,7 @@ msgstr "التفضيلات"
 
 #: ../data/ui/yelp.glade.h:9
 msgid "Re_name"
-msgstr "إعادة ال_تسمية"
+msgstr "أعِد ال_تسمية"
 
 #: ../data/ui/yelp.glade.h:10
 msgid "_Bookmarks:"
@@ -463,11 +466,11 @@ msgstr "ت_صفح بالمؤشر"
 
 #: ../data/ui/yelp.glade.h:12
 msgid "_Find:"
-msgstr "_بحث:"
+msgstr "_جد:"
 
 #: ../data/ui/yelp.glade.h:13
 msgid "_Fixed width:"
-msgstr "عرض _ثابت:"
+msgstr "_ثابت العرض:"
 
 #: ../data/ui/yelp.glade.h:14
 msgid "_Location:"
@@ -491,11 +494,11 @@ msgstr "ا_ستخدام خطوط النّظام"
 
 #: ../data/ui/yelp.glade.h:19
 msgid "_Variable width:"
-msgstr "عرض _قابل للتغيير:"
+msgstr "عرض _متغيّر:"
 
 #: ../data/ui/yelp.glade.h:20
 msgid "_Wrap around"
-msgstr "_كسر"
+msgstr "ا_كسر"
 
 #: ../data/yelp.schemas.in.h:1
 msgid "Font for fixed text"
@@ -507,11 +510,11 @@ msgstr "خطّ النّصّ"
 
 #: ../data/yelp.schemas.in.h:3
 msgid "Font for text with fixed width."
-msgstr "خطّ نص ذي عرض ثابت."
+msgstr "خطّ نص ثابت العرض."
 
 #: ../data/yelp.schemas.in.h:4
 msgid "Font for text with variable width."
-msgstr "خطّ نصّ ذي عرض متغيّر."
+msgstr "خطّ نصّ متغيّر العرض."
 
 #: ../data/yelp.schemas.in.h:5
 msgid "Use a keyboard-controllable caret when viewing pages."
@@ -523,23 +526,23 @@ msgstr "استعمل المؤشر"
 
 #: ../data/yelp.schemas.in.h:7
 msgid "Use system fonts"
-msgstr "استخدام خطوط النّظام"
+msgstr "استخدم خطوط النّظام"
 
 #: ../data/yelp.schemas.in.h:8
 msgid "Use the default fonts set for the system."
-msgstr "استخدام الخطوط الإفتراضيّة المحدّد للنّظام."
+msgstr "استخدم الخطوط الإفتراضيّة المحدّدة للنّظام."
 
 #: ../src/yelp-bookmarks.c:150
 msgid "Open Bookmark in New Window"
-msgstr "فتح علامة الموقع في نافذة جديدة"
+msgstr "افتح علامة الموقع في نافذة جديدة"
 
 #: ../src/yelp-bookmarks.c:154
 msgid "Rename Bookmark"
-msgstr "إعادة تسمية علامة الموقع"
+msgstr "أعِد تسمية علامة الموقع"
 
 #: ../src/yelp-bookmarks.c:158
 msgid "Remove Bookmark"
-msgstr "حذف علامة الموقع"
+msgstr "احذف علامة الموقع"
 
 #: ../src/yelp-bookmarks.c:315
 #, c-format
@@ -557,7 +560,7 @@ msgstr "مواضيع المساعدة"
 
 #: ../src/yelp-bookmarks.c:420
 msgid "Document Sections"
-msgstr "قسم المستند"
+msgstr "أقسام المستند"
 
 #: ../src/yelp-db-pager.c:239 ../src/yelp-db-print-pager.c:190
 #, c-format
@@ -565,7 +568,7 @@ msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "not well-formed XML."
 msgstr ""
-"لم يمكن فهم الملف ‘%s’. من الممكن أن الملف غير موجود, أو أنه ملف XML غير "
+"لم يمكن فهم الملف ‘%s’. من الممكن أن الملف غير موجود، أو أنه ملف XML غير "
 "سليم."
 
 #: ../src/yelp-error.c:42 ../src/yelp-error.c:58
@@ -605,9 +608,7 @@ msgstr "لا معلومات متوفّرة حول الخطأ."
 msgid ""
 "The file  ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "not a well-formed info page."
-msgstr ""
-"لم يمكن فهم الملف ‘%s’. من الممكن أن الملف غير موجود, أو أنه ملف info غير "
-"سليم."
+msgstr "لم يمكن فهم الملف ‘%s’. من الممكن أن الملف غير موجود، أو أنه ملف info غير سليم."
 
 #: ../src/yelp-io-channel.c:107
 #, c-format
@@ -622,12 +623,12 @@ msgstr "استعمل جلسة خاصة"
 
 #: ../src/yelp-main.c:101
 msgid "Define which cache directory to use"
-msgstr "تحديد أي دليل خزن مؤقت سيستخدم"
+msgstr "عرّف أي دليل خزن مؤقت سيستخدم"
 
 #. Commandline parsing is done here
 #: ../src/yelp-main.c:358
 msgid " GNOME Help Browser"
-msgstr "متصفّح المساعدة لجنوم"
+msgstr "متصفّح مساعدة جنوم"
 
 #: ../src/yelp-main.c:376 ../yelp.desktop.in.in.h:2
 msgid "Help"
@@ -638,9 +639,7 @@ msgstr "مساعدة"
 msgid ""
 "The file ‘%s’ could not be parsed.  Either the file does not exist, or it is "
 "formatted incorrectly."
-msgstr ""
-"لم يمكن فهم الملف ‘%s’. من الممكن أن الملف غير موجود, أو أنه منظم بصورة غير "
-"صحيحة."
+msgstr "لم يمكن فهم الملف ‘%s’. من الممكن أن الملف غير موجود، أو أنه منسّق بصورة غير صحيحة."
 
 #: ../src/yelp-pager.c:117
 msgid "Document Information"
@@ -673,7 +672,7 @@ msgstr "الإنتظار للطباعة"
 
 #: ../src/yelp-print.c:579
 msgid "An error occurred while printing"
-msgstr "حدث خطأ عند الطبع."
+msgstr "حدث خطأ عند الطبع"
 
 #: ../src/yelp-print.c:583
 #, c-format
@@ -700,8 +699,7 @@ msgstr "لا نتائج ل \"%s\""
 msgid ""
 "Try using different words to describe the problem you're having or the topic "
 "you want help with."
-msgstr ""
-"جرب استعمال كلمات مغايرة لوصف المشكلة أو الموضوع الذي تريد المساعدة حوله."
+msgstr "جرب استعمال كلمات مغايرة لوصف المشكلة أو الموضوع الذي تريد المساعدة حوله."
 
 #: ../src/yelp-search-pager.c:811
 #, c-format
@@ -746,7 +744,7 @@ msgid ""
 "doesnt:don't:dont:explain:for:from:get:gets:got:make:makes:not:when:has:have:"
 "help:how:i:in:is:it:item:me:my:of:on:or:tell:that:the:thing:this:to:what:"
 "where:who:will:with:won't:wont:why:work:working:works"
-msgstr "و"
+msgstr "و:لا:حول:مع:في:على:هل:كيف:لم"
 
 #. Translators: This is a list of common prefixes for words.
 #. * Do not translate this directly.  Instead, use a colon
@@ -810,26 +808,24 @@ msgstr "YelpTocPager: تعداد الإيقاف المؤقت سلبي."
 msgid ""
 "The table of contents could not be processed. The file ‘%s’ is either "
 "missing or is not a valid XSLT stylesheet."
-msgstr ""
-"لم يمكن فهم جدول المحتويات.  الملف ‘%s’ غير موجود أو ليس ملف XSLT صحيح."
+msgstr "لم يمكن فهم جدول المحتويات.  الملف ‘%s’ غير موجود أو ليس ملف XSLT صحيح."
 
 #: ../src/yelp-toc-pager.c:1110
 #, c-format
 msgid "Read man page for %s"
-msgstr "قراءة صفحة الدّليل لـ %s"
+msgstr "اقرأ صفحة كتيّبل %s"
 
 #: ../src/yelp-toc-pager.c:1703
 #, c-format
 msgid "Read info page for %s"
-msgstr "قراءة صفحات info عن %s"
+msgstr "اقرأ صفحات معلومات %s"
 
 #: ../src/yelp-toc-pager.c:1816
 #, c-format
 msgid ""
 "The table of contents could not be loaded. The file ‘%s’ is either missing "
 "or is not well-formed XML."
-msgstr ""
-"لم يمكن تحميل جدول المحتويات.  الملف ‘%s’ غير موجود أو ليس ملف XML صحيح."
+msgstr "لم يمكن تحميل جدول المحتويات.  الملف ‘%s’ غير موجود أو ليس ملف XML صحيح."
 
 #: ../src/yelp-toc-pager.c:1838
 msgid "Command Line Help"
@@ -841,11 +837,11 @@ msgstr "م_لفّ"
 
 #: ../src/yelp-window.c:318
 msgid "_Edit"
-msgstr "_تحرير"
+msgstr "_حرّر"
 
 #: ../src/yelp-window.c:319
 msgid "_Go"
-msgstr "ذ_هاب"
+msgstr "ا_ذهب"
 
 #: ../src/yelp-window.c:320
 msgid "_Bookmarks"
@@ -861,35 +857,35 @@ msgstr "نافذة جد_يدة"
 
 #: ../src/yelp-window.c:329
 msgid "Print This Document"
-msgstr "طباعة المستند"
+msgstr "اطبع هذا المستند"
 
 #: ../src/yelp-window.c:334
 msgid "Print This Page"
-msgstr "طبع الصفحة الحالية"
+msgstr "اطبع هذه الصفحة"
 
 #: ../src/yelp-window.c:339
 msgid "About This Document"
-msgstr "حول هذا المستند"
+msgstr "حوْل هذا المستند"
 
 #: ../src/yelp-window.c:344
 msgid "Open _Location"
-msgstr "فتح ال_موقع"
+msgstr "افتح ال_موقع"
 
 #: ../src/yelp-window.c:349
 msgid "_Close Window"
-msgstr "_غلق النّافذة"
+msgstr "ا_غلق النّافذة"
 
 #: ../src/yelp-window.c:355
 msgid "_Copy"
-msgstr "_نسخ"
+msgstr "ا_نسخ"
 
 #: ../src/yelp-window.c:361
 msgid "_Select All"
-msgstr "إ_نتقاء الكلّ"
+msgstr "إ_نتقي الكلّ"
 
 #: ../src/yelp-window.c:366
 msgid "_Find..."
-msgstr "_بحث..."
+msgstr "_جد..."
 
 #: ../src/yelp-window.c:371
 msgid "Find Pre_vious"
@@ -897,7 +893,7 @@ msgstr "إيجاد ال_سابق"
 
 #: ../src/yelp-window.c:373
 msgid "Find previous occurrence of the word or phrase"
-msgstr "ايجاد الحدث السابق للكلمة أو الجملة"
+msgstr "ايجاد الحدوث السابق للكلمة أو الجملة"
 
 #: ../src/yelp-window.c:376
 msgid "Find Ne_xt"
@@ -905,7 +901,7 @@ msgstr "إيجاد الت_الي"
 
 #: ../src/yelp-window.c:378
 msgid "Find next occurrence of the word or phrase"
-msgstr "ايجاد الحدث التالي للكلمة أو الجملة"
+msgstr "ايجاد الحدوث التالي للكلمة أو الجملة"
 
 #: ../src/yelp-window.c:381
 msgid "_Preferences"
@@ -913,11 +909,11 @@ msgstr "ال_تفضيلات"
 
 #: ../src/yelp-window.c:386
 msgid "_Reload"
-msgstr "إ_عادة التحميل"
+msgstr "أ_عد التحميل"
 
 #: ../src/yelp-window.c:398
 msgid "_Back"
-msgstr "ت_راجع"
+msgstr "_خلف"
 
 #: ../src/yelp-window.c:400
 msgid "Show previous page in history"
@@ -925,7 +921,7 @@ msgstr "اظهر الصفحة السابقة في التاريخ"
 
 #: ../src/yelp-window.c:403
 msgid "_Forward"
-msgstr "ت_قدّم"
+msgstr "_أمام"
 
 #: ../src/yelp-window.c:405
 msgid "Show next page in history"
@@ -953,23 +949,23 @@ msgstr "ال_محتويات"
 
 #: ../src/yelp-window.c:429
 msgid "_Add Bookmark"
-msgstr "إ_ضافة مؤشّر"
+msgstr "أ_ضف علامة موقع"
 
 #: ../src/yelp-window.c:434
 msgid "_Edit Bookmarks..."
-msgstr "تحرير علامات المواقع..."
+msgstr "حرّر علامات المواقع..."
 
 #: ../src/yelp-window.c:440
 msgid "_Open Link"
-msgstr "_فتح الوصلة"
+msgstr "ا_فتح الوصلة"
 
 #: ../src/yelp-window.c:445
 msgid "Open Link in _New Window"
-msgstr "فتح الوصلة في نافذة _جديدة"
+msgstr "افتح الوصلة في نافذة _جديدة"
 
 #: ../src/yelp-window.c:450
 msgid "_Copy Link Address"
-msgstr "_نسخ عنوان الوصلة"
+msgstr "ا_نسخ عنوان الوصلة"
 
 #: ../src/yelp-window.c:457
 msgid "Help On this application"
@@ -977,11 +973,11 @@ msgstr "مساعدة حول هذا التّطبيق"
 
 #: ../src/yelp-window.c:460
 msgid "_About"
-msgstr "_حول"
+msgstr "_حوْل"
 
 #: ../src/yelp-window.c:465
 msgid "Copy _Email Address"
-msgstr "نسخ البريد الالكتروني"
+msgstr "انسخ البريد الالكتروني"
 
 #: ../src/yelp-window.c:514
 msgid "Help Browser"
@@ -1000,11 +996,11 @@ msgstr "عنوان ‘%s’ غير صحيح أو ليس عنوانا لملف ص
 
 #: ../src/yelp-window.c:1025 ../src/yelp-window.c:1505
 msgid "Man pages are not supported in this version."
-msgstr "صفحات الدّليل غير مدعومة في هذا الإصدار."
+msgstr "صفحات الكتيّبل غير مدعومة في هذا الإصدار."
 
 #: ../src/yelp-window.c:1035 ../src/yelp-window.c:1496
 msgid "GNU info pages are not supported in this version"
-msgstr "صفحات المعلومات GNU غير مدعومة في هذا الإصدار."
+msgstr "صفحات معلومات جنو غير مدعومة في هذا الإصدار."
 
 #: ../src/yelp-window.c:1051 ../src/yelp-window.c:1518
 msgid "Search is not supported in this version."
@@ -1018,23 +1014,23 @@ msgstr "مستندات SGML غير مدعومة. الرجاء سؤال كاتب 
 
 #: ../src/yelp-window.c:1222
 msgid "_Search:"
-msgstr "_بحث:"
+msgstr "ا_بحث:"
 
 #: ../src/yelp-window.c:1223
 msgid "Search for other documentation"
-msgstr "بحث عن مساعدة أخرى"
+msgstr "ابحث عن توثيق آخر"
 
 #: ../src/yelp-window.c:1385
 msgid "Fin_d:"
-msgstr "بح_ث:"
+msgstr "_جد:"
 
 #: ../src/yelp-window.c:1405
 msgid "Find _Next"
-msgstr "بحث عن ال_تّالي"
+msgstr "إيجاد ال_تّالي"
 
 #: ../src/yelp-window.c:1417
 msgid "Find _Previous"
-msgstr "بحث عن _السّابق"
+msgstr "إيجاد _السّابق"
 
 #: ../src/yelp-window.c:1531
 #, c-format
@@ -1052,7 +1048,7 @@ msgid ""
 "maintainers of that application."
 msgstr ""
 "الفصل ‘%s’ غير موجود في هذا المستند. إذا وجهت لهذا القسم من زر مساعدة في "
-"تطبيق, الرجاء إعلام مسيري هذا البرنامج."
+"تطبيق، الرجاء إعلام مسيري هذا البرنامج."
 
 #: ../src/yelp-window.c:1676 ../src/yelp-window.c:2467
 #, c-format
@@ -1072,9 +1068,10 @@ msgstr "جاري التحميل..."
 #: ../src/yelp-window.c:2901
 msgid "translator-credits"
 msgstr ""
-"جهاد عفيفي (Djihed Afifi) <djihed@gmail.com> \n"
-"عرفات المديني، تونس <lumina@silverpen.de>\n"
-"تحت إشراف عربآيز (http://www.arabeyes.org)"
+"فريق عربآيز للترجمة http://www.arabeyes.org :\n"
+"عرفات المديني\t<lumina@silverpen.de>\n"
+"جهاد عفيفي\t<djihed@gmail.com>\n"
+"خالد حسني\t<khaledhosny@eglug.org>"
 
 #: ../src/yelp-window.c:2904
 msgid "Yelp"
@@ -1082,15 +1079,14 @@ msgstr "يالب"
 
 #: ../src/yelp-window.c:2906
 msgid "A documentation browser and viewer for the Gnome Desktop."
-msgstr "متصفح و عارض مستندات لجنوم."
+msgstr "متصفح و عارض وثائق لمكتب جنوم."
 
 #: ../src/yelp-xslt-pager.c:189
 #, c-format
 msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "improperly formatted."
-msgstr ""
-"لم يمكن فهم الملف ‘%s’. من الممكن أن الملف غير موجود, أو أنه ملف غير سليم."
+msgstr "لم يمكن فهم الملف ‘%s’. من الممكن أن الملف غير موجود، أو أنه ملف غير سليم."
 
 #: ../src/yelp-xslt-pager.c:210 ../src/yelp-xslt-pager.c:223
 #, c-format
@@ -1098,64 +1094,10 @@ msgid ""
 "The document ‘%s’ could not be processed. The file ‘%s’ is either missing, "
 "or it is not a valid XSLT stylesheet."
 msgstr ""
-"لم يمكن فهم المستند ‘%s’. من الممكن أن الملف ‘%s’ غير موجود, أو أنه ملف XSLT "
+"لم يمكن فهم المستند ‘%s’. من الممكن أن الملف ‘%s’ غير موجود، أو أنه ملف XSLT "
 "غير سليم."
 
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
-msgstr "احصل على مساعدة مع جُنوم"
+msgstr "احصل على المساعدة في جُنوم"
 
-#~ msgid "<b>Printing</b>"
-#~ msgstr "<b>طباعة</b>"
-
-#~ msgid "Pages"
-#~ msgstr "صفحات"
-
-#~ msgid "Generating PDF is not currently supported"
-#~ msgstr "تحرير PDF غير مدعوم حاليل."
-
-#~ msgid ""
-#~ "You were trying to print to a printer using the \"%s\" driver.  This "
-#~ "program requires a PostScript printer driver."
-#~ msgstr ""
-#~ "محاولة طباعة باستخدام درايفر الطابعة \"%s\". هذه الطابعة تحتاج إلى درايفر "
-#~ "طابعة من نوع PostScript"
-
-#~ msgid "_From:"
-#~ msgstr "_من:"
-
-#~ msgid "Sets the start of the range of pages to be printed"
-#~ msgstr "يضبط بداية نطاق الصفحات لطباعتها"
-
-#~ msgid "_To:"
-#~ msgstr "إ_لى:"
-
-#~ msgid "Sets the end of the range of pages to be printed"
-#~ msgstr "يضبط نهاية نطاق الصفحات التي سيتم طبعها"
-
-#~ msgid "Library Functions"
-#~ msgstr "وظائف المكتبة"
-
-#~ msgid "Multimedia"
-#~ msgstr "الوسائط المتعدّدة"
-
-#~ msgid "Other"
-#~ msgstr "أخرى"
-
-#~ msgid "<b>_Bookmarks:</b>"
-#~ msgstr "<b>_علامات موقع:</b>"
-
-#~ msgid "<b>_Title:</b>"
-#~ msgstr "<b>ال_عنوان:</b>"
-
-#~ msgid "Yelp Factory"
-#~ msgstr "مصنع يالب"
-
-#~ msgid "Unknown Section"
-#~ msgstr "قسم مجهول"
-
-#~ msgid "Could not activate Yelp: '%s'"
-#~ msgstr "لم يمكن تنشيط يالب: '%s'"
-
-#~ msgid "Could not open new window."
-#~ msgstr "لم يمكن فتح نافذة جديدة."
