--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-07  Raivis Dejus  <orvils@gmail.com>
+
+        * lv.po: Updated Latvian Translation.
+
 2006-12-1  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation.
