--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-12  Ales Nyakhaychyk  <nab@mail.by>
+
+	* be.po: Updated Belarusian Translation.
+
 2006-12-07  Raivis Dejus  <orvils@gmail.com>
 
         * lv.po: Updated Latvian Translation.
