--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-16  Yair Hershkovitz  <yairhr@gmail.com>
+
+	* he.po: Updated Hebrew translation.
+
 2006-12-12  Ales Nyakhaychyk  <nab@mail.by>
 
 	* be.po: Updated Belarusian Translation.
