--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-02-23  Christian Persch  <chpe@svn.gnome.org>
+
+	* src/Yelper.cpp:
+	* src/Yelper.h:
+	Fix for mozilla API change on trunk.
+
 2006-12-01  Christian Persch  <chpe@cvs.gnome.org>
 
 	* configure.in:
