Update Ukrainian translation.
2007-03-01 Maxim Dziumanenko <dziumanenko@gmail.com>

	* Update Ukrainian translation.


svn path=/trunk/; revision=2775

--- a/po/uk.po
+++ b/po/uk.po
@@ -1,14 +1,14 @@
 # Ukrainian translation of Yelp.
 # Copyright (C) 2001 Free Software Foundation, Inc.
 # Yuriy Syrota <rasta@renome.rovno.ua>, 2001.
-# Maxim Dzumanenko <dziumanenko@gmail.com>, 2004-2006
+# Maxim Dzumanenko <dziumanenko@gmail.com>, 2004-2007
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-04 09:06+0300\n"
-"PO-Revision-Date: 2006-08-04 18:34+0200\n"
+"PO-Revision-Date: 2007-03-01 18:34+0200\n"
 "Last-Translator: Maxim Dzumanenko <dziumanenko@gmail.com>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -281,15 +281,15 @@ msgstr "Огляди X11"
 
 #: ../data/toc.xml.in.h:1
 msgid "Accessibility"
-msgstr "Спеціальні можливості"
+msgstr "Допоміжні можливості"
 
 #: ../data/toc.xml.in.h:2
 msgid "Accessories"
-msgstr "Стандартні"
+msgstr "Стандартні програми"
 
 #: ../data/toc.xml.in.h:3
 msgid "Applications for fun"
-msgstr "Програми для розваг"
+msgstr "Розважальні програми"
 
 #: ../data/toc.xml.in.h:4
 msgid "Applications for manipulating or viewing graphics"
@@ -305,7 +305,7 @@ msgstr "Програми, що відносяться до X Windows"
 
 #: ../data/toc.xml.in.h:7
 msgid "Applications related to multimedia"
-msgstr "Програми, що відносяться до мультимедія"
+msgstr "Програми, що відносяться до мультимедіа"
 
 #: ../data/toc.xml.in.h:8
 msgid "Applications related to software development"
@@ -1126,48 +1126,3 @@ msgstr ""
 msgid "Get help with GNOME"
 msgstr "Отримання довідки у середовищі GNOME"
 
-#~ msgid "Library Functions"
-#~ msgstr "Бібліотечні функції"
-
-#~ msgid "Administration"
-#~ msgstr "Адміністрування"
-
-#~ msgid "Multimedia"
-#~ msgstr "Мультимедія"
-
-#~ msgid "Other"
-#~ msgstr "Інші"
-
-#~ msgid "Yelp Factory"
-#~ msgstr "Фабрика програми довідки"
-
-#~ msgid "Could not activate Yelp: '%s'"
-#~ msgstr "Не вдається активувати довідку: \"%s\""
-
-#~ msgid "Could not open new window."
-#~ msgstr "Не вдається відкрити нове вікно."
-
-#~ msgid "Pages"
-#~ msgstr "Сторінки"
-
-#~ msgid "Generating PDF is not currently supported"
-#~ msgstr "Створення PDF наразі не підтримується"
-
-#~ msgid ""
-#~ "You were trying to print to a printer using the \"%s\" driver.  This "
-#~ "program requires a PostScript printer driver."
-#~ msgstr ""
-#~ "Ви намагаєтесь надрукувати документ на принтері, що використовує драйвер "
-#~ "\"%s\".цій програмі потрібен драйвер PostScript."
-
-#~ msgid "_From:"
-#~ msgstr "_Від:"
-
-#~ msgid "Sets the start of the range of pages to be printed"
-#~ msgstr "Початок діапазону сторінок, що друкуються."
-
-#~ msgid "_To:"
-#~ msgstr "_До:"
-
-#~ msgid "Sets the end of the range of pages to be printed"
-#~ msgstr "Кінець діапазону сторінок, що друкуються."
