--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+==================== 2.16.2 ====================
+2007-03-12  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	* NEWS:
+	- Version 2.18.0
+
 2007-02-23  Christian Persch  <chpe@svn.gnome.org>
 
 	* src/Yelper.cpp:
