--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+Changed in 2.18.0:
+------------------
+* Fix for mozilla API change on trunk (Christian Persch)
+* Updated translations:
+  ar    (Djihed Afifi)
+  be    (Ales Nyakhaychyk)
+  fr    (Jonathan Ernst)
+  he    (Yair Hershkovitz)
+  hu    (Gabor Kelemen)
+  ku    (Erdal Ronahi)
+  lt    (Gintautas Miliauskas)
+  lv    (Raivis Dejus)
+  pl    (Marek Stepien)
+  uk    (Maxim Dziumanenko)
+
 Changed in 2.16.2:
 ------------------
 * Don't crash when manpath is unavailable		    (Don Scorgie)
