Updated Turkish Translation
svn path=/trunk/; revision=2780

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-12  Baris Cicek <baris@teamforce.name.tr
+
+	* tr.po: Updated Turkish translation
+
 2007-03-04  Erdal Ronahi  <erdal dot ronahi at gmail dot com>
 
 	* ku.po: Updated Kurdish translation
