--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-17  Jovan Naumovski  <jovan@lugola.net>
+ 
+ 	 * mk.po: Updated Macedonian translation.
+
 2007-03-16  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
