--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-23  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Updated Italian translation.
+
 2007-03-17  Jovan Naumovski  <jovan@lugola.net>
  
  	 * mk.po: Updated Macedonian translation.
