src/yelp-toc-pager.c: First work on Spoon integration Search for
src/yelp-toc-pager.c:
* configure.in:
First work on Spoon integration
Search for pkg-config Spoon file
Run a spoon-for-each, printing doc names
-This line, and those below, will be ignored--

M    configure.in
M    src/yelp-toc-pager.c
M    ChangeLog

svn path=/branches/yelp-spoon/; revision=2791

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-03-25  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-toc-pager.c:
+	* configure.in:
+	First work on Spoon integration
+	Search for pkg-config Spoon file
+	Run a spoon-for-each, printing doc names
+
 ==================== 2.16.2 ====================
 2007-03-12  Shaun McCance  <shaunm@gnome.org>
 
