--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-25  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gl.po: Updated Galician Translation.
+
 2007-03-23  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
