--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
-==================== 2.16.2 ====================
+==================== 2.18.1 ====================
+2007-04-09  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	* NEWS:
+	- Version 2.18.1
+
+==================== 2.18.0 ====================
 2007-03-12  Shaun McCance  <shaunm@gnome.org>
 
 	* configure.in:
