--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+Changed in 2.18.1:
+------------------
+* Updated translations:
+  eu     (Inaki Larranaga Murgoitio)
+  gl     (Ignacio Casal Quinteiro)
+  it     (Luca Ferretti)
+  ku     (Erdal Ronahi)
+  mk     (Jovan Naumovski)
+  sq     (Laurent Dhima)
+  sv     (Daniel Nylander)
+  tr     (Baris Cicek)
+
 Changed in 2.18.0:
 ------------------
 * Fix for mozilla API change on trunk (Christian Persch)
