--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-10  Peter Bach  <bach.peter@gmail.com>
+
+	* da.po: Updated Danish translation.
+
 2007-04-03  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
 
 	* eu.po: Updated Basque translation.
