- Made yelp-man-parser use yelp-debug
* src/yelp-man-parser.c:
* src/Makefile.am:
- Made yelp-man-parser use yelp-debug

svn path=/branches/yelp-document/; revision=2800

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-04-12  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-man-parser.c:
+	* src/Makefile.am:
+	- Made yelp-man-parser use yelp-debug
+
 2007-04-11  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-error.c:
