- Added preliminary support for mime types in yelp-page
* src/yelp-document.c:
* src/yelp-page.c:
* src/yelp-page.h:
- Added preliminary support for mime types in yelp-page

svn path=/branches/yelp-document/; revision=2801

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-04-12  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-document.c:
+	* src/yelp-page.c:
+	* src/yelp-page.h:
+	- Added preliminary support for mime types in yelp-page
+
+2007-04-12  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-man-parser.c:
 	* src/Makefile.am:
 	- Made yelp-man-parser use yelp-debug
