Convert info TOC to use new spoon work
* src/yelp-toc-pager.c: 
Convert info TOC to use new spoon work

svn path=/branches/yelp-spoon/; revision=2803

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-14  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-toc-pager.c: 
+	Convert info TOC to use new spoon work
+
 2007-03-25  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* stylesheets/toc2html.xsl: 
