convert man TOC to new spoon work as well
* src/yelp-toc-pager.c:
(slightly later) convert man TOC to new spoon work as well

svn path=/branches/yelp-spoon/; revision=2804

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* src/yelp-toc-pager.c: 
 	Convert info TOC to use new spoon work
+	(slightly later) Convert man TOC to use new spoon work as well
 
 2007-03-25  Don Scorgie  <dscorgie@cvs.gnome.org>
 
