--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-17  Guntupalli Karunakar  <karunakar@indlinux.org>
+
+	* hi.po: Updated Hindi translation.
+
 2007-04-10  Peter Bach  <bach.peter@gmail.com>
 
 	* da.po: Updated Danish translation.
