--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-04-20  Christian Kirbach  <Christian.Kirbach@googlemail.com>
+
+	* yelp.desktop.in.in:
+	Remove invalid category "Application". Fixes #417366.
+
 2007-04-16  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* src/yelp-db-pager.c: (db_pager_params), (node_get_title):
