Initial commit of new yelp-toc (broken) Add toc option to test-document
* src/yelp-toc.c:
* src/yelp-toc.h:
* src/yelp-db-pager.c:
* src/test-document.c:
* src/Makefile.am:
Initial commit of new yelp-toc (broken)
Add toc option to test-document (broken)

svn path=/branches/yelp-spoon/; revision=2809

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2007-04-24  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-toc.c:
+	* src/yelp-toc.h:
+	* src/yelp-db-pager.c:
+	* src/test-document.c:
+	* src/Makefile.am:
+	Initial commit of new yelp-toc (broken)
+	Add toc option to test-document (broken)
+
+
 2007-04-22  Shaun McCance  <shaunm@gnome.org>
 
 	* ChangeLog
