--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2007-04-26  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* stylesheets/toc2html.xsl: 
+	* src/test-document.c:
+	* src/yelp-toc.c:
+	Make TOC work properly with new document structure	
+
+	* src/yelp-page.c:
+	* src/yelp-docbook.c:
+	Various misc. changes to make docbook work properly
+	Add TODO's
+
 2007-04-24  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-toc.c:
