Add info page support
* src/yelp-toc.c:
Add info page support

svn path=/branches/yelp-spoon/; revision=2811

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2007-04-26  Don Scorgie  <dscorgie@cvs.gnome.org>
 
+	* src/yelp-toc.c:
+	Add info page support
+	
 	* stylesheets/toc2html.xsl: 
 	* src/test-document.c:
 	* src/yelp-toc.c:
