--- a/po/oc.po
+++ b/po/oc.po
@@ -1,12 +1,8 @@
-# translation of or.po to Oriya
-# Oriya  translation of yelp.HEAD.pot.
+# Occitan  translation of yelp.HEAD.pot.
 # This file is distributed under the same license as the yelp package.
 # Copyright (C) 2005 Free Software Foundation,Inc.
-# $Id: or.po,v 1.3 2006/08/10 08:16:04 sbehera Exp $
-# Sudhansu <srujanika@yahoo.com>, 2004.
-# Kasturi Dhal <kasturi_mama@yahoo.com>, 2005.
-# Gora Mohanty <gora_mohanty@yahoo.co.in>, 2006.
-# Subhransu Behera <arya_subhransu@yahoo.co.in>, 2006.
+#
+# Yannig MARCHEGAY (yannig@marchegay.org) - 2006-2007
 #
 msgid ""
 msgstr ""
@@ -14,12 +10,12 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-10 00:46+0200\n"
 "PO-Revision-Date: 2007-05-13 13:26+0200\n"
-"Last-Translator: Subhransu Behera <arya_subhransu@yahoo.co.in>\n"
-"Language-Team: Oriya <oriya-group@lists.sarovar.org>\n"
+"Last-Translator: Yannig MARCHEGAY <yannig@marchegay.org>\n"
+"Language-Team: Occitan (post 1500) <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);"
+"Plural-Forms: nplurals=2; plural=(n > 1);"
 
 #: ../data/info.xml.in.h:1 ../src/yelp-toc-pager.c:1849
 msgid "GNU Info Pages"
