--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-23  Rhys Jones  <rhys@sucs.org>
+
+	* cy.po: Updated Welsh translation.
+
 2007-04-17  Guntupalli Karunakar  <karunakar@indlinux.org>
 
 	* hi.po: Updated Hindi translation.
