Beginning (empty) of new utils resolver (masked by DON_UTILS define)
* src/yelp-utils.h:
* src/yelp-utils.c:
Beginning (empty) of new utils resolver (masked by DON_UTILS define)	
* src/test-resolver.c: 
* src/Makefile.am:
Beginnings of resolver test

svn path=/branches/yelp-spoon/; revision=2817

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2007-05-31  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* src/yelp-utils.h:
+	* src/yelp-utils.c:
+	Beginning (empty) of new utils resolver (masked by DON_UTILS define)
+	
+	* src/test-resolver.c: 
+	* src/Makefile.am:
+	Beginnings of resolver test
+	
+	
 2007-04-30  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-toc.c: 
