Add ghelp resolve support Many minor fixes to pass default test suite Add
* src/yelp-utils.c: 
Add ghelp resolve support
Many minor fixes to pass default test suite
* src/test-resolver.c: 
Add default tests

svn path=/branches/yelp-spoon/; revision=2821

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2007-06-12  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* src/yelp-utils.c: 
+	Add ghelp resolve support
+	Many minor fixes to pass default test suite
+
+	* src/test-resolver.c: 
+	Add default tests
+
+	
 2007-06-11  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* src/yelp-utils.c: 
