updated hebrew translation
svn path=/trunk/; revision=2823

--- a/po/he.po
+++ b/po/he.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD.he\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-02 04:18+0000\n"
+"POT-Creation-Date: 2007-01-16 13:21+0000\n"
 "PO-Revision-Date: 2005-07-31 15:56+0300\n"
 "Last-Translator: Yair Hershkovitz <yairhr@gmail.com>\n"
 "Language-Team: Hebrew <he@li.org>\n"
@@ -215,33 +215,27 @@ msgstr "חלקים 3, 3o, ו-3t"
 
 #: ../data/man.xml.in.h:47
 msgid "Sections 3form and 3menu"
-msgstr ""
-"חלקים 3form ו-3menu"
+msgstr "חלקים 3form ו-3menu"
 
 #: ../data/man.xml.in.h:48
 msgid "Sections 3ncurses and 3curses"
-msgstr ""
-"חלקים 3ncurses ו-3curses" 
+msgstr "חלקים 3ncurses ו-3curses"
 
 #: ../data/man.xml.in.h:49
 msgid "Sections 3pm and 3perl"
-msgstr ""
-"חלקים 3pm ו-3perl"
+msgstr "חלקים 3pm ו-3perl"
 
 #: ../data/man.xml.in.h:50
 msgid "Sections 3x and 3X11"
-msgstr ""
-"חלקים 3x ו-3X11"
+msgstr "חלקים 3x ו-3X11"
 
 #: ../data/man.xml.in.h:51
 msgid "Sections 7 and 7gcc"
-msgstr ""
-"חלקים 7 ו-7gcc"
+msgstr "חלקים 7 ו-7gcc"
 
 #: ../data/man.xml.in.h:52
 msgid "Sections 8 and 8l"
-msgstr ""
-"חלקים 8 ו-8l"
+msgstr "חלקים 8 ו-8l"
 
 #: ../data/man.xml.in.h:53
 msgid "System Administration"
@@ -700,8 +694,8 @@ msgstr "אין תוצאות עבור \"%s\""
 msgid ""
 "Try using different words to describe the problem you're having or the topic "
 "you want help with."
-msgstr ""
-"נסה להשתמש במילים אחרות לתיאור הבעיה או הנושא בהם אתה מחפש עזרה."
+msgstr "נסה להשתמש במילים אחרות לתיאור הבעיה או הנושא בהם אתה מחפש עזרה."
+
 #: ../src/yelp-search-pager.c:811
 #, c-format
 msgid "Search results for \"%s\""
@@ -1070,7 +1064,10 @@ msgid "translator-credits"
 msgstr ""
 "גיל אשר <dolfin@rpg.org.il>\n"
 "יובל טנאי\n"
-"יאיר הרשקוביץ <yairhr@gmail.com>"
+"יאיר הרשקוביץ <yairhr@gmail.com>\n"
+"\n"
+"פרוייקט תרגום GNOME לעברית:\n"
+"‏http://gnome-il.berlios.de"
 
 #: ../src/yelp-window.c:2904
 msgid "Yelp"
@@ -1085,8 +1082,7 @@ msgstr "דפדפן העזרה של שולחן העבודה GNOME"
 msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "improperly formatted."
-msgstr ""
-"לא ניתן לנתח את הקובץ ‘%s’. הקובץ לא קיים או שהוא בתצורה שגויה."
+msgstr "לא ניתן לנתח את הקובץ ‘%s’. הקובץ לא קיים או שהוא בתצורה שגויה."
 
 #: ../src/yelp-xslt-pager.c:210 ../src/yelp-xslt-pager.c:223
 #, c-format
