--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-13  Yair Hershkovitz  <yairhr@gmail.com>
+
+	* he.po: Updated Hebrew translation.
+
 2007-05-23  Rhys Jones  <rhys@sucs.org>
 
 	* cy.po: Updated Welsh translation.
