Spoon is now Rarian. Bump min version to 0.5.0
* configure.in: 
* src/test-resolver.c:
* src/yelp-toc.c:
* src/yelp-window.c:
* src/yelp-utils.c:
* src/yelp-utils.h:
Spoon is now Rarian.  Bump min version to 0.5.0

svn path=/branches/yelp-spoon/; revision=2827

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2007-06-20  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* configure.in: 
+	* src/test-resolver.c:
+	* src/yelp-toc.c:
+	* src/yelp-window.c:
+	* src/yelp-utils.c:
+	* src/yelp-utils.h:
+	Spoon is now Rarian.  Bump min version to 0.5.0
+
 2007-06-14  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* src/yelp-utils.c:
