Handle external URI's Beginnings of error support (not complete)
* src/yelp-window.c: 
Handle external URI's
Beginnings of error support (not complete)

svn path=/branches/yelp-spoon/; revision=2836

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-07-10  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* src/yelp-window.c: 
+	Handle external URI's
+	Beginnings of error support (not complete)
+	
 2007-07-08  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* src/yelp-window.c: 
