--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-07-16  Sunil Mohan Adapa  <sunil@atc.tcs.com>
+
+	* te.po: Added Telugu translation done by
+	Bharat Kumar <jonnalagaddabharat@gmail.com>.
+
 2007-06-28  Priit Laes  <plaes@svn.gnome.org>
 
 	* et.po: Estonian translation update by Ivar Smolin.
