Convert search across to use Rarian and clean up lots of crud from the
* src/yelp-search-parser.c: 
Convert search across to use Rarian
and clean up lots of crud from the file

svn path=/branches/yelp-spoon/; revision=2841

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-07-24  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* src/yelp-search-parser.c: 
+	Convert search across to use Rarian
+	and clean up lots of crud from the file
+	
 2007-07-23  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* configure.ac:
