--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-07-29  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* src/yelp-window.c: 
+	Make loading of files directly work again
+	
 2007-07-24  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* src/yelp-info.c: 
