Updated Occitan translation
svn path=/trunk/; revision=2844

--- a/po/oc.po
+++ b/po/oc.po
@@ -1,4 +1,4 @@
-# Occitan  translation of yelp.HEAD.pot.
+# Occitan translation of yelp.HEAD.pot.
 # This file is distributed under the same license as the yelp package.
 # Copyright (C) 2005 Free Software Foundation,Inc.
 #
@@ -439,7 +439,7 @@ msgstr "Recèrcar"
 
 #: ../data/ui/yelp.glade.h:7
 msgid "Open Location"
-msgstr "Dubrir un emplaçament"
+msgstr "Dobrir un emplaçament"
 
 #: ../data/ui/yelp.glade.h:8
 msgid "Preferences"
@@ -527,7 +527,7 @@ msgstr "Utilisar las poliças per defaut definidas pel sistèma."
 
 #: ../src/yelp-bookmarks.c:150
 msgid "Open Bookmark in New Window"
-msgstr "Dubrir lo favorit dins una fenèstra nòva"
+msgstr "Dobrir lo favorit dins una fenèstra nòva"
 
 #: ../src/yelp-bookmarks.c:154
 msgid "Rename Bookmark"
@@ -872,11 +872,11 @@ msgstr "A prepaus del document"
 
 #: ../src/yelp-window.c:345
 msgid "Open _Location"
-msgstr "Dubrir un _emplaçament"
+msgstr "Dobrir un _emplaçament"
 
 #: ../src/yelp-window.c:350
 msgid "_Close Window"
-msgstr "_Barrar la fenèstra"
+msgstr "_Tampar la fenèstra"
 
 #: ../src/yelp-window.c:356
 msgid "_Copy"
@@ -920,7 +920,7 @@ msgstr "_Tornar"
 
 #: ../src/yelp-window.c:401
 msgid "Show previous page in history"
-msgstr "Mostrar la pagina precedenta de l'istoric"
+msgstr "Visualizar la pagina precedenta de l'istoric"
 
 #: ../src/yelp-window.c:404
 msgid "_Forward"
@@ -928,7 +928,7 @@ msgstr "_Seguent"
 
 #: ../src/yelp-window.c:406
 msgid "Show next page in history"
-msgstr "Mostrar la pagina seguenta de l'istoric"
+msgstr "Visualizar la pagina seguenta de l'istoric"
 
 #: ../src/yelp-window.c:409
 msgid "_Help Topics"
@@ -964,7 +964,7 @@ msgstr "_Dubrir lo ligam"
 
 #: ../src/yelp-window.c:446
 msgid "Open Link in _New Window"
-msgstr "Dubrir lo ligam dins una fenèstra _nòva"
+msgstr "Dobrir lo ligam dins una fenèstra _nòva"
 
 #: ../src/yelp-window.c:451
 msgid "_Copy Link Address"
@@ -1067,8 +1067,7 @@ msgstr "Cargament..."
 #: ../src/yelp-window.c:2911
 msgid "translator-credits"
 msgstr ""
-"La còla occitana de revirada d'Ubuntu, 2006 - ubuntu-l10n-"
-"oci@lists.ubuntu.com"
+"La còla occitana de revirada d'Ubuntu, 2007 - ubuntu-l10n-oci@lists.ubuntu.com"
 
 #: ../src/yelp-window.c:2914
 msgid "Yelp"
