Make themes sort-of work. Good enough for a release, anyway
* src/yelp-settings.c: 
* configure.in:
* src/yelp-settings.h:
* src/Makefile.am:
* stylesheets/yelp-common.xsl:
Make themes sort-of work.  Good enough for
a release, anyway

svn path=/branches/yelp-spoon/; revision=2845

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* src/yelp-settings.c: 
+	* configure.in:
+	* src/yelp-settings.h:
+	* src/Makefile.am:
+	* stylesheets/yelp-common.xsl:
+	Make themes sort-of work.  Good enough for
+	a release, anyway.
+
 2007-07-29  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* src/yelp-window.c: 
