Disable test programs for now
* src/Makefile.am: 
Disable test programs for now

svn path=/trunk/; revision=2850

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
+2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>
 
+	* src/Makefile.am: 
+	Disable test programs for now
+	
 == REWORK CHANGES ==
 
 2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>
