--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>
 
+        * configure.in: 
+        * NEWS:
+        - Version 2.19.1
+
+2007-07-30  Don Scorgie  <dscorgie@svn.gnome.org>
+
 	* src/Makefile.am: 
 	Disable test programs for now
 	
