--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Changed in 2.19.1:
+------------------
+* Merge of yelp-spoon (rework) branch
+  - Move to shiny new on-demand pager system
+  - Remove scrollkeeper in favour of Rarian
+  - Update dependancy of gnome-doc-utils to latest version
+  - Make search, man and info pages required
+  - Reduced dependance on libgnome
+  - Large cleanup of other files
+  - Improve printing
+  - Give docbook a nice TOC on the right
+  - Probably many other things I've forgotten
+
 Changed in 2.18.1:
 ------------------
 * Updated translations:
